--- a/src/main/resources/templates/editar_anime.html
+++ b/src/main/resources/templates/editar_anime.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" >
 <head>
     <meta charset="UTF-8">
-    <title>Añadir Anime</title>
+    <title>Editar Anime</title>
     <link rel="stylesheet" href="../static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
@@ -10,12 +10,12 @@
 
 
               body,html{
-              background: url(https://i.pinimg.com/originals/98/28/6a/98286a2243ada070aef5a6925dd3bc54.gif);
+              background: url(https://external-preview.redd.it/QaLgZjUUQqV1uBV88mM047X7VtD2737Ov4HvMSLXey0.gif?s=91980ef09f8214af77ba449145f7ca816f7bc41d);
               background-size: cover;
               height: 100%;
-            font-family: 'Numans', sans-serif;
+               font-family: 'Numans', sans-serif;
               }
- 
+
         </style>
     </style>
 
@@ -38,6 +38,10 @@
                 <div class="card-body">
                     <form th:action="@{/guardar}" th:object="${anime}" method="post">
 
+                        <div class="form-group">
+                            <label>ID Anime: </label>
+                            <input type="text" name="nombre" th:field="*{id}"  class="form-control" readonly="readonly">
+                        </div>
                         <div class="form-group">
                             <label>Nombre: </label>
                             <input type="text" name="nombre" th:field="*{nombre}"  class="form-control" placeholder="Digite el nombre del anime" required>
