--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,27 +7,39 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <style>
-            .navbar{
-            justify-content:start;
+                *{
+                box-sizing:border-box;}
+              body,html{
+              background: url(https://i.pinimg.com/originals/98/28/6a/98286a2243ada070aef5a6925dd3bc54.gif);
+              background-size: cover;
+              height: 100%;
+              font-family: 'Numans', sans-serif;
+              }
+        .table{
+            --bs-table-color: #ffffff!important;
+        }
         </style>
 
 </head>
+
 <body>
 
     <nav class="navbar bg-dark">
         <div class="container-fluid">
             <a class="navbar-brand" style="color:white" href="/">Lista de Anime</a>
-            <ul>
-                <li class="nav-item"><a style="color:white" class="nav-link" href="/nuevoAnime">Añadir anime</a></li>
-            </ul>
+
         </div>
     </nav>
+    <br>
+
+        <a style="color:white" class="nav-link" href="/nuevoAnime">Añadir anime</a>
+
     <br>
     <div class="container text-center">
         <table class="table">
             <thead>
             <tr>
-                <th scope="col">ID</th>
+                <th scope="col">#</th>
                 <th scope="col">Nombre</th>
                 <th scope="col">Autor</th>
                 <th scope="col">Capitulos</th>
@@ -36,12 +48,17 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="anime : ${listaAnime}">
+            <tr th:each="anime : ${listaAnime}" >
                 <td th:text="${anime.id}"></td>
                 <td th:text="${anime.nombre}">Otto</td>
                 <td th:text="${anime.autor}">@mdo</td>
                 <td th:text="${anime.capitulos}">Otto</td>
                 <td th:text="${anime.finalizado}">@mdo</td>
+                <td>
+                    <a th:href="@{'/editarAnime/' + ${anime.id}}" class="btn btn-primary">Editar</a>
+                    <a th:href="@{'/eliminarAnime/' + ${anime.id}}" class="btn btn-danger">Eliminar</a>
+                </td>
+
             </tr>
 
             </tbody>
