Añadiendo spring security, aun falta que haga la verificacion con la BBDD.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -60,8 +60,7 @@
 
         //////////
         .btnAñadir{
-            position:relative;
-            left: 15vw;
+
         }
 
 
@@ -81,12 +80,15 @@
                         Lista de Anime
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a style="color:white" class="btnAñadir" href="/nuevoAnime">Añadir anime</a>
+                </li>
             </ul>
 
     </nav>
     <br>
 
-        <a style="color:white" class="btnAñadir" href="/nuevoAnime">Añadir anime</a>
+
         <!--<button class="btnAgregar" role="button">Añadir Anime</button>-->
 
     <br><br><br>
