--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,8 @@
               body,html{
               background: url(https://i.pinimg.com/originals/98/28/6a/98286a2243ada070aef5a6925dd3bc54.gif);
               background-size: cover;
+              background-repeat: no-repeat;
+              background-position: center;
               height: 100%;
               font-family: 'Numans', sans-serif;
               }
@@ -71,17 +73,17 @@
 
 <body>
 
-    <nav class="navbar bg-dark">
-            <ul>
-                <li class="nav-item">
-                    <a class="btnAgregar" href="" style="
+    <nav class="navbar bg-dark ">
+            <ul class="navEdit" style="display: flex;">
+                <li class="nav-item ">
+                    <a class="btnAgregar" href="/index" style="
                     color:white;
                     text-decoration:none;">
                         Lista de Anime
                     </a>
                 </li>
-                <li class="nav-item">
-                    <a style="color:white" class="btnAñadir" href="/nuevoAnime">Añadir anime</a>
+                <li class="nav-item" style="margin-left: 500px;">
+                    <a style="color:white;text-decoration" class="btnAñadir" href="/nuevoAnime">Añadir anime</a>
                 </li>
             </ul>
 
